--- a/Regna/css/style.css
+++ b/Regna/css/style.css
@@ -130,6 +130,10 @@ h1, h2, h3, h4, h5, h6 {
     z-index: 997;
     border-bottom: 1px solid #dadada;
 }
+#header #logo{
+  width: 65px;
+  height: 65px;
+}
   #header #logo h1 {
     font-size: 26px;
   }
